# serializer version: 1
# name: test_hash_scheme_is_pinned
  'b46c567cc7ec765faf539e86c52a98c74773ba9d416528c8c45df7402fee7589'
# ---
# name: test_hash_scheme_is_pinned.1
  '370a2f4a2ee695bd11c562588b0b1d979852ca369ad9e6d188a6e69f5afe12f8'
# ---
